@@ -39,10 +39,12 @@ import org.springframework.data.elasticsearch.core.mapping.SimpleElasticsearchMa
 import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.SSLContext;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.bf.framework.boot.constant.MiddlewareConst.*;
@@ -92,7 +94,7 @@ public class ElasticsearchAutoConfig implements EnableConfigHandler<Elasticsearc
         return result;
     }
     private RestClient createRestClient(ElasticsearchProperties cfg) {
-        RestClientBuilder builder = RestClient.builder(cfg.getUris().stream().map(ElasticsearchAutoConfig::createNode).toList()
+        RestClientBuilder builder = RestClient.builder(cfg.getUris().stream().map(ElasticsearchAutoConfig::createNode).collect(Collectors.toList())
                 .stream()
                 .map((node) -> new HttpHost(node.getHost(), node.getPort(), node.getScheme()))
                 .toArray(HttpHost[]::new));
@@ -129,6 +131,62 @@ public class ElasticsearchAutoConfig implements EnableConfigHandler<Elasticsearc
 //        map.from(delayAfterFailure).asInt(Duration::toMillis).to(builder::setSniffAfterFailureDelayMillis);
         return builder.build();
     }
+    public static HttpHost createHttpHost(String uri) {
+        try {
+            return createHttpHost(URI.create(uri));
+        } catch (IllegalArgumentException var3) {
+            return HttpHost.create(uri);
+        }
+    }
+    public static HttpHost createHttpHost(URI uri) {
+        if (!org.springframework.util.StringUtils.hasLength(uri.getUserInfo())) {
+            return HttpHost.create(uri.toString());
+        } else {
+            try {
+                return HttpHost.create((new URI(uri.getScheme(), (String)null, uri.getHost(), uri.getPort(), uri.getPath(), uri.getQuery(), uri.getFragment())).toString());
+            } catch (URISyntaxException var3) {
+                throw new IllegalStateException(var3);
+            }
+        }
+    }
+//    private RestClient createRestClient(ElasticsearchProperties cfg) {
+//        RestClientBuilder builder = RestClient.builder(cfg.getUris().stream().map(ElasticsearchAutoConfig::createNode).toList()
+//                .stream()
+//                .map((node) -> new HttpHost(node.getHost(), node.getPort(), node.getScheme()))
+//                .toArray(HttpHost[]::new));
+//        PropertyMapper map = PropertyMapper.get();
+//        builder.setHttpClientConfigCallback((httpClientBuilder) -> {
+//            httpClientBuilder.setDefaultCredentialsProvider(new CredentialsProvider(cfg));
+//            map.from(cfg::isSocketKeepAlive)
+//                    .to((keepAlive) -> httpClientBuilder
+//                            .setDefaultIOReactorConfig(IOReactorConfig.custom().setSoKeepAlive(keepAlive).build()));
+//
+//            configureSsl(httpClientBuilder,getBundle(cfg.getRestclient().getSsl().getBundle()));
+//            return httpClientBuilder;
+//        });
+//        builder.setRequestConfigCallback((requestConfigBuilder) -> {
+//            map.from(cfg::getConnectionTimeout)
+//                    .whenNonNull()
+//                    .asInt(Duration::toMillis)
+//                    .to(requestConfigBuilder::setConnectTimeout);
+//            map.from(cfg::getSocketTimeout)
+//                    .whenNonNull()
+//                    .asInt(Duration::toMillis)
+//                    .to(requestConfigBuilder::setSocketTimeout);
+//            return requestConfigBuilder;
+//        });
+//        String pathPrefix = cfg.getPathPrefix();
+//        if (StringUtils.isNotBlank(pathPrefix)) {
+//            builder.setPathPrefix(pathPrefix);
+//        }
+////        SnifferBuilder builder = Sniffer.builder(client);
+////        PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
+////        Duration interval = cfg.getRestclient().getSniffer().getInterval();
+////        map.from(interval).asInt(Duration::toMillis).to(builder::setSniffIntervalMillis);
+////        Duration delayAfterFailure = cfg.getRestclient().getSniffer().getDelayAfterFailure();
+////        map.from(delayAfterFailure).asInt(Duration::toMillis).to(builder::setSniffAfterFailureDelayMillis);
+//        return builder.build();
+//    }
     private static URI createNode(String uri) {
         if (!(uri.startsWith("http://") || uri.startsWith("https://"))) {
             uri = "http://" + uri;
